Adding upload sobject support

--- a/NG2inSFHelloWorld/src/classes/SFRemoteController.cls
+++ b/NG2inSFHelloWorld/src/classes/SFRemoteController.cls
@@ -2,12 +2,21 @@ public with sharing class SFRemoteController {
 	public SFRemoteController() {
 		
 	}
-
+ 
 	@RemoteAction
 	public static List<SObject> getRecords(SOQLInput soqlInput){
 		return Database.query(soqlInput.soql);
 	}
 
+	@RemoteAction 
+	public static void updateSObjects(UpdateInput theUpdateInput){
+		update theUpdateInput.sobjects;
+	} 
+
+	public Class UpdateInput{
+		public List<SObject> sobjects {get;set;}
+	}
+ 
 
 	public Class SOQLInput{
 		public String soql {get;set;}
